@@ -363,6 +363,7 @@ SCIPPLUGINLIBOBJ=       scip/branch_allfullstrong.o \
 			scip/heur_zirounding.o \
 			scip/message_default.o \
 			scip/nodesel_bfs.o \
+			scip/nodesel_breadthfirst.o \
 			scip/nodesel_dfs.o \
 			scip/nodesel_estimate.o \
 			scip/nodesel_hybridestim.o \
