@@ -25,6 +25,7 @@ features:
 - added average gap based on primal-dual integral to solution statistics, can be disabled via parameter "misc/calcintegral" 
 - new LP-based rounding heuristic (heur_randround) whose randomized rounding is biased towards the LP solution value. 
   The heuristic uses the probing mode of SCIP to generate conflict causes on the fractional variables  
+- added breadth first search node selection
 - added new dual presolving for setppc-constraints
 - changed dualfix presolver to propagator such that dual fixing can also be applied during repropagation of the root node
 - added upgrade from varbound constraints to set-packing constraints
